--- a/templates/index.html
+++ b/templates/index.html
@@ -130,17 +130,41 @@
     </div>
     <div class="mypost">
         <div class="form-floating mb-3">
-            <input type="text" class="form-control" id="name" placeholder="Nickname">
+            <input type="text" class="form-control" id="name" placeholder="url">
             <label for="floatingInput">Nickname</label>
         </div>
         <div class="form-floating">
             <textarea class="form-control" placeholder="Leave a comment here" id="comment"
                 style="height: 100px"></textarea>
-            <label for="floatingTextarea">Comment</label>
+            <label for="floatingTextarea2">Comment</label>
         </div>
         <button onclick="save_comment()" type="button" class="btn btn-dark">Save</button>
     </div>
     <div class="mycards" id="comment-list">
+        <div class="card">
+            <div class="card-body">
+                <blockquote class="blockquote mb-0">
+                    <p>I love your new album!</p>
+                    <footer class="blockquote-footer">BubbleBranch199</footer>
+                </blockquote>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-body">
+                <blockquote class="blockquote mb-0">
+                    <p>I love your new album!</p>
+                    <footer class="blockquote-footer">BubbleBranch199</footer>
+                </blockquote>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-body">
+                <blockquote class="blockquote mb-0">
+                    <p>I love your new album!</p>
+                    <footer class="blockquote-footer">BubbleBranch199</footer>
+                </blockquote>
+            </div>
+        </div>
     </div>
 </body>
 
